--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -39,7 +39,13 @@ header {
 
 // login
 #login {
-  background: linear-gradient(to right, $primary 0%, $primary 50%, $white 50%, $white 100%);
+  background: linear-gradient(
+    to right,
+    $primary 0%,
+    $primary 50%,
+    $white 50%,
+    $white 100%
+  );
 
   @media screen and (max-width: 742px) {
     height: 100vh;
@@ -184,7 +190,8 @@ header {
     background: $white;
     padding: 2rem;
 
-    h5 {}
+    h5 {
+    }
 
     p {
       color: $medium;
@@ -327,6 +334,7 @@ header {
     .p-container {
       position: fixed;
       max-width: 600px;
+      height: 300px;
       top: 2vh;
       bottom: 2vh;
       left: 0;
