added DeletePost component

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -144,6 +144,14 @@ section {
       background: $primary;
     }
   }
+
+  &--error {
+    background: $error;
+
+    &:hover {
+      background: darken($error, 10%);
+    }
+  }
 }
 
 .text-center {
