Users view, Add / Remove Friend functionality

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -5,3 +5,9 @@ $light: #f5f8fa;
 $medium: #657786;
 $dark: #34495e;
 $white: #fff;
+$black: #222;
+$primary-text: #050505;
+$secondary-text: #65676b;
+$shadow-2: rgba(0, 0, 0, 0.2);
+$secondary-button-background: #e4e6eb;
+$primary-button-background: #e7f3ff;
