--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -11,3 +11,5 @@ $secondary-text: #65676b;
 $shadow-2: rgba(0, 0, 0, 0.2);
 $secondary-button-background: #e4e6eb;
 $primary-button-background: #e7f3ff;
+$primary-button-color: #1877f2;
+$secondary-button-background: #e4e6eb;
