--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -13,3 +13,4 @@ $secondary-button-background: #e4e6eb;
 $primary-button-background: #e7f3ff;
 $primary-button-color: #1877f2;
 $secondary-button-background: #e4e6eb;
+$tooltip-bg: #303133;
